quiz-server/k8s/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-kraft
  labels:
    app: kafka-kraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-kraft
  template:
    metadata:
      labels:
        app: kafka-kraft
    spec:
      containers:
        - name: kafka
          image: apache/kafka:latest
          resources:
            requests:
              memory: "300Mi"
              cpu: "200m"
            limits:
              memory: "300Mi"
              cpu: "300m"
          ports:
            - containerPort: 9092
            - containerPort: 9093
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-pvc  # <-- create this PVC separately
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-kraft
spec:
  selector:
    app: kafka-kraft
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
